--- a/index.html
+++ b/index.html
@@ -22,6 +22,12 @@
 			</div>
                     </div>
                     <div class="group">
+                        <div class="item" id="red"     style="background-color:red "><i class="fa fa-bold"></i></div>
+                        <div class="item" id="blue"    style="background-color:blue "><i class="fa fa-italic"></i></div>
+                        <div class="item" id="green"   style="background-color:green "><i class="fa fa-underline"></i></div>
+                        <div class="item" id="yellow"  style="background-color:yellow "><i class="fa fa-underline"></i></div>
+                    </div>
+                    <div class="group">
                         <div class="item" id="makeOrderedList"><i class="fa fa-list"></i></div>
                     </div>
                 </div>
